--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,3 +1,4 @@
+{{define "layout"}}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -15,8 +16,9 @@
         </nav>
     </header>
     <main>
-        {{template "content" .}}
+        {{block "content" .}}{{end}}
     </main>
     <script src="/static/js/main.js"></script>
 </body>
-</html> 
+</html>
+{{end}} 
